--- a/app/styles/Video.css
+++ b/app/styles/Video.css
@@ -2,7 +2,6 @@
 
 .video-container {
     width: 100%; /* Full width to span across home-container */
-    font-family: Arial, sans-serif;
     background-color: var(--background-color); /* Optional: adds a background color to distinguish the section */
     font-size: 1em;
     margin-bottom: 20px;
@@ -33,20 +32,16 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     color: #1a4789
 }
-/*
+
 .video-container h2 {
-    background-color:var(--background-color);
-    font-size: 2em;
-    margin-bottom: 10px;
-    color: var(--text-color);
-    text-align: center; /* Center the heading 
+    font-family: 'Georgia';
 }
-*/
+
 .video-title {
     font-family: 'Georgia';
     font-size: 1.5rem;
     margin-top: 10px;
-    font-weight: bold;
+
 }
 
 .video-meta {
@@ -90,29 +85,17 @@
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
   }
   
-
-
-
-
-
-/*
-.video-item video {
-    background-color:var(--background-color);
+  .video-wrapper {
+    position: relative;
     width: 100%;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding-top: 56.25%; /* Aspect ratio 16:9 */
 }
 
-.video-item h4 {
-    background-color:var(--background-color);
-    font-size: 1.2em;
-    margin-top: 10px;
-    color: var(--text-color);
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.video-item p {
-    background-color:var(--background-color);
-    font-size: 0.9em;
-    color: var(--text-color);
-}
-*/
